# chi2026

./: .env.example  .gitignore  README.md  build_index.py  build_projection.py  build_visual_assets.py  generate_taglines.py  main.py  mcp_server.py  prograp.py  pyproject.toml  requirements.md  search_index.py  sync_taglines_to_papers.py  sync_translations_to_papers.py  translate_csv.py  web_search_app.py
data/: index_meta.json  projection.npz  taglines_ja.json  translation_failures.jsonl
static/: visual_search.html
static/assets/: coords.f32  manifest.json  projection.json  visual_search.css  visual_search.js  visual_worker.js
